--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "axios": "^1.8.4"
+    "@types/express-rate-limit": "^5.1.3",
+    "axios": "^1.8.4",
+    "express-rate-limit": "^7.5.0"
   }
 }
